# msvc-redist-helper

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
ci/: code-signing-cert-win.pfx
source/: bin.cpp  curl.cpp  curl.hpp
